--- a/Forward model/Forward_SEB_model.ipynb
+++ b/Forward model/Forward_SEB_model.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "id": "glizNJaKqKpj"
    },
@@ -25,29 +25,21 @@
    "source": [
     "# Import general libraries\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "import matplotlib.pyplot as plt\n",
-    "from IPython.display import display, clear_output"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is the land surface model we are solving. G(t) is given in Equation (1) of the paper. \n",
-    "![image.png][def]\n",
-    "\n",
-    "The land surface model is solved using Finite Difference Method. We use a central finite difference discretisation in space and a backward Euler discretisation in time. HFirst we create the discretised space and time arrays. \n",
-    "\n",
-    "[def]: attachment:image.png"
+    "The land surface model is solved using Finite Difference Method. We use a central finite difference discretisation in space and a backward Euler discretisation in time. HFirst we create the discretised space and time arrays. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "id": "dfSezMNmqjEo"
    },
@@ -87,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "id": "JZWuSagqqlJ3"
    },
@@ -241,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "id": "odHnrF_Kqlu2"
    },
@@ -320,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "id": "nJosmmy2qtoe"
    },
@@ -362,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "id": "R9LNW3StOFGa"
    },
@@ -398,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -429,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +430,7 @@
        "Text(0, 0.5, 'Temperature ($K$)')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -473,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
