--- a/Inverse model_Synthetic data/Inverse_SEB_model_Synthetic_data_2depths.ipynb
+++ b/Inverse model_Synthetic data/Inverse_SEB_model_Synthetic_data_2depths.ipynb
@@ -30,19 +30,11 @@
       "outputs": [],
       "source": [
         "#-- Import general libraries\n",
-        "import os\n",
         "import numpy as np\n",
-        "import pandas as pd\n",
-        "import time\n",
         "import math\n",
         "import torch\n",
         "import torch.nn as nn\n",
-        "import torch.nn.functional as F\n",
-        "import matplotlib.pyplot as plt\n",
-        "import csv\n",
-        "import sys\n",
-        "import scipy\n",
-        "from torch.optim.lr_scheduler import StepLR"
+        "import concurrent.futures"
       ]
     },
     {
@@ -53,10 +45,6 @@
       },
       "outputs": [],
       "source": [
-        "import multiprocessing\n",
-        "import concurrent.futures\n",
-        "\n",
-        "\n",
         "# Define the function to be executed by each process\n",
         "def worker_function(x):\n",
         "    start = 0\n",
@@ -145,8 +133,8 @@
         "    trise = 7*hour\n",
         "    tset = 21*hour\n",
         "\n",
-        "    t24 = np.mod(time, 24*hour);\n",
-        "    theta=(t24-trise)/(tset-trise)*np.pi/2 + (t24-tset)/(tset-trise)*np.pi/2;\n",
+        "    t24 = np.mod(time, 24*hour)\n",
+        "    theta=(t24-trise)/(tset-trise)*np.pi/2 + (t24-tset)/(tset-trise)*np.pi/2\n",
         "    for i in range(Nt+1):\n",
         "        if abs(theta[i]) > np.pi/2:\n",
         "            theta[i] = theta[i]/abs(theta[i])*np.pi/2\n",
@@ -156,7 +144,7 @@
         "    Ta_array = Ta*np.ones(Nt+1)\n",
         "\n",
         "    #convert target to tensor\n",
-        "    time = np.linspace(0, t_total,Nt+1);\n",
+        "    time = np.linspace(0, t_total,Nt+1)\n",
         "    target_T5 = np.loadtxt('Target_T2_euler.txt') # Load soil temperature data at depth 5 cm\n",
         "    target_Ts = np.loadtxt('Target_T1_euler.txt') # Load soil temperature data at surface\n",
         "\n",
