--- a/Inverse model_Synthetic data/Synthetic data_graphs.ipynb
+++ b/Inverse model_Synthetic data/Synthetic data_graphs.ipynb
@@ -18,28 +18,16 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import csv\n",
-    "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
-    "from matplotlib.transforms import ScaledTranslation\n",
-    "import matplotlib.gridspec as gridspec\n",
-    "import math"
+    "from matplotlib.transforms import ScaledTranslation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "92304ee9-1744-4c20-9560-2602d001c628",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.6283410831360573\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#True values\n",
     "alpha_true = 0.2\n",
@@ -47,15 +35,12 @@
     "Tb_true = 293\n",
     "C_true = 2.2e6\n",
     "beta_true = 1.5\n",
-    "h_true = 15\n",
-    "omega = 2*np.pi/(24*3600)\n",
-    "d_omega = np.sqrt(8*np.pi**2*Lambda_true/C_true/omega)\n",
-    "print(d_omega)"
+    "h_true = 15"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "d1845f1f-6763-4c85-a7a3-de852b1cbc54",
    "metadata": {},
    "outputs": [],
@@ -77,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "441499b1-4488-4188-a6a9-ae11a8482fcb",
    "metadata": {},
    "outputs": [],
@@ -99,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "e860e3a9-2ada-494d-aba9-d4953ba58ac9",
    "metadata": {},
    "outputs": [],
@@ -118,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "ccd294fc-3656-4489-8589-6aae80c27a65",
    "metadata": {},
    "outputs": [
@@ -244,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "60690494-71e1-45ed-b5b7-31ab047011a3",
    "metadata": {},
    "outputs": [
